# C-labs

./: .gitignore  README.md
docx_reporter/: .gitignore  auto_unicode_to_define.py  codgen.py  config.toml  main.py  pyproject.toml  template.docx  Пр_Лб{report_number}_{group}_{student_last_name}.docx
lab1/: lab1.depend  lab1.layout  main.c
lab2/: lab2.cbp  lab2.depend  lab2.layout  main.c
lab3/: lab3.depend  lab3.layout
lab4/: lab4.cbp  main.c  task_manager.h
lab5/: main.c  sort.c  sort.h
lab6/: main.c
lab7/: main.c
lab8/: main.c
pw1/: main.c  pw1.depend  pw1.layout
pw2/: main.c  pw2.cbp  pw2.depend
pw3/: pw3.depend  pw3.layout
pw4/: main.c  pw4.depend
pw5/: main  main.c  pw5.cbp  table.h
pw6/: main.c  pw6.cbp
semester1/lab1/: lab1.cbp
semester1/lab3/: lab3.cbp  main.c
semester1/lab5/: input.c  input.h  lab5.cbp  main.c  sort.c  task_manager.c
semester1/lab6/: lab6.cbp  task_manager.c
semester1/lab7/: lab7.cbp
semester1/lab8/: lab8.cbp  task_manager.h
semester1/pw1/: main.c  pw1.cbp
semester1/pw3/: main.c  pw3.cbp
semester1/pw4/: pw4.cbp  test.py
semester1/pw5/: table.c
semester2/idz1/: Makefile  idz1.cbp  input.csv  main.c  output.csv
semester2/idz1/report/: output.xlsx
semester2/idz1/src/: CMakeLists.txt  main.c
semester2/idz1/src/libs/: CMakeLists.txt
semester2/idz1/src/libs/hash_table/: hash_table.c
semester2/idz1/src/libs/linked_list/: linked_list.c  linked_list.h
semester2/idz1/src/libs/table/: CMakeLists.txt  table.c  table.h
semester2/idz1/src/task_manager/: task_manager.c
semester2/idz1/src/tasks/: CMakeLists.txt  task1.c  task2_1.c  task2_2.c  tasks.h
semester2/lab1/: Makefile
semester2/lab1/report/: report.md
semester2/lab1/src/: CMakeLists.txt  main.c
semester2/lab1/src/libs/: CMakeLists.txt
semester2/lab1/src/libs/hash_table/: CMakeLists.txt
semester2/lab1/src/libs/table/: table.c  table.h  table_wtf.c
semester2/lab1/src/libs/utils/: CMakeLists.txt  utils.c
semester2/lab1/src/tasks/: CMakeLists.txt  task1.c  task2.c
semester2/lab2/: Makefile
semester2/lab2/src/tasks/: task1.c  task2.c  task3.c  task4.c  tasks.h
semester2/lab3/src/: CMakeLists.txt  main.c
semester2/lab3/src/tasks/: CMakeLists.txt  task.c  tasks.h
semester2/lab4/: Makefile
semester2/lab4/src/: main.c
semester2/lab4/src/tasks/: task.c  tasks.h
semester2/lab5/: Makefile  plot.py  pyproject.toml  sort.csv
semester2/lab5/src/: CMakeLists.txt
semester2/lab5/src/tasks/: CMakeLists.txt  task.c  tasks.h
semester2/lab6/: Makefile
semester2/lab6/src/: CMakeLists.txt
semester2/lab6/src/tasks/: CMakeLists.txt  task.c
semester2/lab7/: Makefile
semester2/lab7/src/: CMakeLists.txt
semester2/lab7/src/tasks/: CMakeLists.txt  task1.c  task2.c  task3.c  tasks.h
semester2/lab8/: CMakeLists.txt  Makefile
semester2/lab8/src/: main.c
semester2/lab8/src/libs/dyn_array/: CMakeLists.txt  dyn_array.c  dyn_array.h
semester2/lab8/src/libs/utils/: utils.c
semester2/lab8/src/tasks/: CMakeLists.txt  ex.c  task1.c  task2.c  task3.c  task_utils.c  task_utils.h  tasks.h
semester2/pz1/: Makefile  input.csv  output.csv
semester2/pz1/src/: CMakeLists.txt  main.c
semester2/pz1/src/libs/utils/: utils.h
semester2/pz1/src/tasks/: CMakeLists.txt  task1.c
semester2/pz2/src/: main.c
semester2/pz2/src/task_manager/: CMakeLists.txt
semester2/pz2/src/tasks/: task1.c
semester2/pz3/: Makefile
semester2/pz3/src/: main.c
semester2/pz3/src/task_manager/: task_manager.c
semester2/pz3/src/tasks/: CMakeLists.txt  task1.c  task2.c  task3.c  tasks.h
semester2/pz4/: Makefile
semester2/pz4/src/: CMakeLists.txt  main.c
semester2/pz4/src/libs/: CMakeLists.txt
semester2/pz4/src/libs/linked_list/: CMakeLists.txt  linked_list.c
semester2/pz4/src/tasks/: CMakeLists.txt  task1.c  tasks.h
semester2/pz5/: Makefile
semester2/pz5/src/: CMakeLists.txt
semester2/pz5/src/tasks/: CMakeLists.txt  task1.c  task2.c  tasks.h
semester2/pz6/: Makefile
semester2/pz6/src/: CMakeLists.txt
semester2/pz6/src/tasks/: CMakeLists.txt  task.c
semester2/pz7/: Makefile
semester2/pz7/src/: CMakeLists.txt
semester2/pz7/src/libs/bst/: CMakeLists.txt  bst.c  bst.h  bst_utils.c  bst_utils.h
semester2/pz7/src/libs/task_manager/: task_manager.c
semester2/pz7/src/libs/utils/: utils.h
semester2/pz7/src/tasks/: CMakeLists.txt  task.c
task_template/: Makefile
task_template/src/: CMakeLists.txt  main.c
task_template/src/tasks/: task1.c
