[tool.poetry]
name = "cpp-report"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docxtpl = "^0.16.8"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
